--- a/optimset.bib
+++ b/optimset.bib
@@ -6,7 +6,7 @@
     year         = 2006,
     journal      = {SIAM J. Optim.},
     volume       = 17,
-    pages        = {188--217},
+    pages        = {188--217}
 }
 
 @book{Audet_Hare_2017,
@@ -14,7 +14,7 @@
     author       = {Audet, C. and Hare, W.},
     year         = 2017,
     publisher    = {Springer},
-    series       = {Springer Ser. Oper. Res. Financ. Eng.},
+    series       = {Springer Ser. Oper. Res. Financ. Eng.}
 }
 
 @article{Bandeira_Scheinberg_Vicente_2012,
@@ -23,7 +23,7 @@
     year         = 2012,
     journal      = {Math. Program.},
     volume       = 134,
-    pages        = {223--257},
+    pages        = {223--257}
 }
 
 @article{Berahas_Byrd_Nocedal_2019,
@@ -32,7 +32,7 @@
     year         = 2019,
     journal      = {SIAM J. Optim.},
     volume       = 29,
-    pages        = {965--993},
+    pages        = {965--993}
 }
 
 @article{Booker_Etal_1999,
@@ -41,7 +41,7 @@
     year         = 1999,
     journal      = {Struct. Multidiscip. Optim.},
     volume       = 17,
-    pages        = {1--13},
+    pages        = {1--13}
 }
 
 @book{Conn_Gould_Toint_2000,
@@ -49,7 +49,7 @@
     author       = {Conn, A. R. and Gould, N. I. M. and Toint, Ph. L.},
     year         = 2000,
     publisher    = {SIAM},
-    series       = {MPS-SIAM Ser. Optim.},
+    series       = {MPS-SIAM Ser. Optim.}
 }
 
 @inproceedings{Conn_Scheinberg_Toint_1998,
@@ -58,7 +58,7 @@
     year         = 1998,
     booktitle    = {Proceedings of the 7th AIAA/USAF/NASA/ISSMO Symposium on Multidisciplinary Analysis and Optimization},
     publisher    = {AIAA},
-    pages        = {129--139},
+    pages        = {129--139}
 }
 
 @book{Conn_Scheinberg_Vicente_2009,
@@ -66,7 +66,7 @@
     author       = {Conn, A. R. and Scheinberg, K. and N. Vicente, L.},
     year         = 2009,
     publisher    = {SIAM},
-    series       = {MPS-SIAM Ser. Optim.},
+    series       = {MPS-SIAM Ser. Optim.}
 }
 
 @inproceedings{Conn_Toint_1996,
@@ -76,7 +76,7 @@
     booktitle    = {Nonlinear Optimization and Applications},
     publisher    = {Springer},
     pages        = {27--47},
-    editor       = {{Di Pillo}, G. and Giannessi, F.},
+    editor       = {{Di Pillo}, G. and Giannessi, F.}
 }
 
 @inproceedings{Custodio_Scheinberg_Vicente_2017,
@@ -86,7 +86,7 @@
     booktitle    = {Advances and Trends in Optimization with Engineering Applications},
     publisher    = {SIAM},
     pages        = {495--506},
-    editor       = {Terlaky, T. and Anjos, M. F. and Ahmed, S.},
+    editor       = {Terlaky, T. and Anjos, M. F. and Ahmed, S.}
 }
 
 @article{Dennis_Schnabel_1979,
@@ -95,14 +95,23 @@
     year         = 1979,
     journal      = {SIAM Rev.},
     volume       = 21,
-    pages        = {443--459},
+    pages        = {443--459}
+}
+
+@article{Dodangeh_Vicente_Zhang_2016,
+    title        = {On the optimal order of worst case complexity of direct search},
+    author       = {Dodangeh, M. and Vicente, L. N. and Zhang, Z.},
+    year         = 2016,
+    journal      = {Optim. Lett.},
+    volume       = 10,
+    pages        = {699--708}
 }
 
 @article{Eldred_Etal_2022,
     title        = {Derivative-free optimization of a rapid-cycling synchrotron},
     author       = {Eldred, J. S. and Larson, J. and Padidar, M. and Stern, E. and Wild, S. M.},
     year         = 2022,
-    journal      = {Optim. Eng.},
+    journal      = {Optim. Eng.}
 }
 
 @inproceedings{Gazaix_Etal_2019,
@@ -111,7 +120,7 @@
     year         = 2019,
     booktitle    = {AIAA Aviation 2019 Forum},
     publisher    = {AIAA},
-    address      = {Dallas, TX, USA},
+    address      = {Dallas, TX, USA}
 }
 
 @techreport{Ghanbari_Scheinberg_2017,
@@ -119,7 +128,7 @@
     author       = {Ghanbari, H. and Scheinberg, K.},
     year         = 2017,
     number       = {17T-005},
-    institution  = {COR\@L},
+    institution  = {COR\@L}
 }
 
 @article{Hooke_Jeeves_1961,
@@ -128,7 +137,7 @@
     year         = 1961,
     journal      = {J. ACM},
     volume       = 8,
-    pages        = {212--229},
+    pages        = {212--229}
 }
 
 @article{Kolda_Lewis_Torczon_2003,
@@ -137,7 +146,7 @@
     year         = 2003,
     journal      = {SIAM Rev.},
     volume       = 45,
-    pages        = {385--482},
+    pages        = {385--482}
 }
 
 @article{Larson_Menickelly_Wild_2019,
@@ -146,7 +155,7 @@
     year         = 2019,
     journal      = {Acta Numer.},
     volume       = 28,
-    pages        = {287--404},
+    pages        = {287--404}
 }
 
 @article{Nelder_Mead_1965,
@@ -155,7 +164,7 @@
     year         = 1965,
     journal      = {Comput. J.},
     volume       = 7,
-    pages        = {308--313},
+    pages        = {308--313}
 }
 
 @book{Nocedal_Wright_2006,
@@ -164,7 +173,7 @@
     year         = 2006,
     publisher    = {Springer},
     series       = {Springer Ser. Oper. Res. Financ. Eng.},
-    edition      = {Second},
+    edition      = {Second}
 }
 
 @article{Porcelli_Toint_2017,
@@ -173,7 +182,7 @@
     year         = 2017,
     journal      = {ACM Trans. Math. Software},
     volume       = 44,
-    pages        = 6,
+    pages        = 6
 }
 
 @article{Porcelli_Toint_2022,
@@ -182,7 +191,7 @@
     year         = 2022,
     journal      = {ACM Trans. Math. Software},
     volume       = 48,
-    pages        = {1--25},
+    pages        = {1--25}
 }
 
 @article{Powell_1975,
@@ -191,7 +200,7 @@
     year         = 1975,
     journal      = {ACM Trans. Math. Software},
     volume       = 1,
-    pages        = {97--107},
+    pages        = {97--107}
 }
 
 @inproceedings{Powell_1994,
@@ -202,7 +211,7 @@
     publisher    = {Springer},
     volume       = 275,
     pages        = {51--67},
-    editor       = {Gomez, S. and Hennart, J. P.},
+    editor       = {Gomez, S. and Hennart, J. P.}
 }
 
 @article{Powell_1998,
@@ -211,7 +220,7 @@
     year         = 1998,
     journal      = {Acta Numer.},
     volume       = 7,
-    pages        = {287--336},
+    pages        = {287--336}
 }
 
 @article{Powell_2002,
@@ -220,7 +229,7 @@
     year         = 2002,
     journal      = {Math. Program.},
     volume       = 92,
-    pages        = {555--582},
+    pages        = {555--582}
 }
 
 @article{Powell_2004a,
@@ -229,7 +238,7 @@
     year         = 2004,
     journal      = {Math. Program.},
     volume       = 100,
-    pages        = {183--215},
+    pages        = {183--215}
 }
 
 @inproceedings{Powell_2004b,
@@ -239,7 +248,7 @@
     booktitle    = {Numerical Linear Algebra and Optimization},
     publisher    = {Science Press},
     pages        = {56--78},
-    editor       = {Yuan, Y.},
+    editor       = {Yuan, Y.}
 }
 
 @inproceedings{Powell_2006,
@@ -251,7 +260,7 @@
     series       = {Nonconvex Optimization and Its Applications},
     volume       = 83,
     pages        = {255--297},
-    editor       = {{Di Pillo}, G. and Roma, M.},
+    editor       = {{Di Pillo}, G. and Roma, M.}
 }
 
 @techreport{Powell_2009,
@@ -259,7 +268,7 @@
     author       = {Powell, M. J. D.},
     year         = 2009,
     number       = {DAMTP 2009/NA06},
-    institution  = {Department of Applied Mathematics and Theoretical Physics, University of Cambridge},
+    institution  = {Department of Applied Mathematics and Theoretical Physics, University of Cambridge}
 }
 
 @article{Powell_2013,
@@ -268,7 +277,7 @@
     year         = 2013,
     journal      = {Math. Program.},
     volume       = 138,
-    pages        = {475--500},
+    pages        = {475--500}
 }
 
 @article{Qian_Yu_2021,
@@ -277,28 +286,28 @@
     year         = 2021,
     journal      = {Front. Comput. Sci.},
     volume       = 15,
-    pages        = 156336,
+    pages        = 156336
 }
 
 @phdthesis{Ragonneau_2022,
     title        = {Model-Based Derivative-Free Optimization Methods and Software},
     author       = {Ragonneau, T. M.},
     year         = 2022,
-    school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University},
+    school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University}
 }
 
 @misc{Ragonneau_Zhang_2021,
     title        = {{PDFO: Cross-Platform Interfaces for Powell's Derivative-Free Optimization Solvers}},
     author       = {Ragonneau, T. M. and Zhang, Z.},
     year         = 2021,
-    howpublished = {\url{https://www.pdfo.net/}},
+    howpublished = {\url{https://www.pdfo.net/}}
 }
 
 @misc{Ragonneau_Zhang_2023,
     title        = {{COBYQA --- Constrained Optimization BY Quadratic Approximations}},
     author       = {Ragonneau, T. M. and Zhang, Z.},
     year         = 2023,
-    howpublished = {\url{https://www.cobyqa.com/}},
+    howpublished = {\url{https://www.cobyqa.com/}}
 }
 
 @article{Rios_Sahinidis_2013,
@@ -307,28 +316,28 @@
     year         = 2013,
     journal      = {J. Global Optim.},
     volume       = 56,
-    pages        = {1247--1293},
+    pages        = {1247--1293}
 }
 
 @inproceedings{Wild_2008,
     title        = {{MNH}: a derivative-free optimization algorithm using minimal norm {Hessians}},
     author       = {Wild, S. M.},
     year         = 2008,
-    booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods},
+    booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods}
 }
 
 @misc{Xie_Yuan_2022,
     title        = {Least {$H^2$} norm updating quadratic interpolation model function for derivative-free trust-region algorithms},
     author       = {Xie, P. and Yuan, Y.},
     year         = 2022,
-    howpublished = {Distinguished lecture for the PolyU 85\textsuperscript{th} and AMA 50\textsuperscript{th} Anniversary presented at the Department of Applied Mathematics, The Hong Kong Polytechnic University},
+    howpublished = {Distinguished lecture for the PolyU 85\textsuperscript{th} and AMA 50\textsuperscript{th} Anniversary presented at the Department of Applied Mathematics, The Hong Kong Polytechnic University}
 }
 
 @phdthesis{Zhang_2012,
     title        = {On Derivative-Free Optimization Methods \textnormal{(in Chinese)}},
     author       = {Zhang, Z.},
     year         = 2012,
-    school       = {Chinese Academy of Sciences},
+    school       = {Chinese Academy of Sciences}
 }
 
 @article{Zhang_2014,
@@ -337,5 +346,5 @@
     year         = 2014,
     journal      = {Math. Program.},
     volume       = 146,
-    pages        = {77--96},
+    pages        = {77--96}
 }
