--- a/optimset.tex
+++ b/optimset.tex
@@ -123,6 +123,11 @@
 % Checks page or column breaks for issues with widow or orphan lines
 \usepackage[prevent-all]{widows-and-orphans}
 
+% no line break in inline math
+\interdisplaylinepenalty=10000
+\relpenalty=10000
+\binoppenalty=10000
+
 % Prevent footnotes from running to the next page
 \interfootnotelinepenalty=10000
 
@@ -657,9 +662,10 @@ Recall that~$p=2$ is of interest concerning Powell's methods.
 \begin{theorem}
     \label{th:optimset}
     Assume that~$m=2n+1$, and that either~$n\le 2$ or
-    \[
+    \begin{equation}
+        \label{eq:pineq}
         1 \le p \le \frac{2\log n}{\log (n/2)}.
-    \]
+    \end{equation}
     If an interpolation set containing~$0$ is~$\Lambda$-poised in~$\mathcal{B}_p(\Delta)$, then~$\Lambda \ge \Lambda_p$.
 \end{theorem}
 
@@ -669,22 +675,26 @@ Recall that~$p=2$ is of interest concerning Powell's methods.
     have~$\Lambda \ge 1$, because the Lagrange polynomial corresponding to~$0$ takes the value~$1$ at~$0$.
     Thus the theorem holds.
 \end{proof}
-It is worth noting that Propositions~\ref{prop:lambda-p-1} and~\ref{prop:lambda-p-2} also imply that~$\xpt[0]_{2n+1}$ renders~$\Lambda_p = 1$ for~$p \in \set{1, 2}$.
+It is worth mentioning that Propositions~\ref{prop:lambda-p-1} and~\ref{prop:lambda-p-2} also imply that~$\xpt[0]_{2n+1}$ renders~$\Lambda_p = 1$ for~$p \in \set{1, 2}$.
 This equality turns out to be true for a larger range of~$p$.
 
 
 
-\subsubsection{Remarks}
+\subsubsection{Remarks and open questions}
 
+Note that~$\Lambda_p$ can be regarded as a function of~$m$. Theorem~\ref{th:optimset} implies that~$m^\ast = 2n+1$ minimizes this function if $p$ satisfies inequality~\eqref{eq:pineq}.
+We conjecture that~$2n+1$ minimizes~$\Lambda_p$ for any~$p \ge 1$, but we do not have any proof for such a statement yet.
 
-In addition,~$m = 2n + 1$ is optimal for~$\xpt[0]_m$ in the sense that~$\Lambda_p$ attains the lower bound~$1$ in such a case when~$p \in [1, 2]$.
-We conjecture that~$\Lambda_p$ is minimized at the value~$m = 2n + 1$ for any~$p \ge 1$, but we do not have any proof of such a statement yet.
-
-Note that the definition of~$\xpt[0]_m$ in~\eqref{eq:set-def} and~\eqref{eq:set-def-m} assumes that~$m \le 2n + 1$.
-Powell~\cite{Powell_2006} proposed an extension of~$\xpt[0]_m$ in the case~$m > 2n + 1$, and hence,~$\xpt[0]_m$ is defined for any number of interpolation points~$m \in \set{1, 2, \dots, (n + 1) (n + 2) / 2}$.
-With such an extension, it is interesting to ask whether~$m = 2n + 1$ still minimizes~$\Lambda_p$, which seems to be true according to some numerical experiments.
+The definition of~$\xpt[0]_m$ in~\eqref{eq:set-def} and~\eqref{eq:set-def-m} assumes that~$m \le 2n + 1$.
+Even though larger values of~$m$ are not recommended in practice, Powell~\cite{Powell_2006} proposed
+an extension of~$\xpt[0]_m$ for~$m>2n+1$.
+With such an extension, we can define~$\Lambda_p$ by~\eqref{eq:Lambdap} for any~$m \in \{n+2, n+3, \dots, (n+1)(n+2)/2\}$.
+It is interesting to ask whether~$2n + 1$ still minimizes~$\Lambda_p$ for any~$p \ge 1$, which seems to be true according to some numerical experiments.
 We leave this problem open and expect the analysis to be more challenging than what we have done.
-One of the challenges is that Lemma~\ref{lem:lambda-p} does not hold in the case~$m > 2n + 1$, and hence, the calculations will become more involving.
+One of the challenges is that Lemma~\ref{lem:lambda-p} does not hold when~$m > 2n + 1$, and hence, the estimations of~$\Lambda_p$ will become more involving.
+
+\cite{Dodangeh_Vicente_Zhang_2016}
+
 
 \section{Conclusion}
 
@@ -695,7 +705,7 @@ In particular, we showed that the interpolation set he proposed for \solvername{
 The authors report that there are no competing interests to declare.
 
 \paragraph*{Funding}
-This work was supported by the University Grants Committee of Hong Kong under Grants PF18-24698 (Hong Kong Ph.D. Fellowship Scheme), PolyU 253012/17P, PolyU 153054/20P, and PolyU 153066/21P; and The Hong Kong Polytechnic University under Grant P0009767.
+This work was supported by the University Grants Committee of Hong Kong under grants PF18-24698 (Hong Kong Ph.D. Fellowship Scheme), PolyU 253012/17P, PolyU 153054/20P, and PolyU 153066/21P, and by The Hong Kong Polytechnic University under grant P0009767.
 
 \bibliographystyle{amsplain}
 \bibliography{\jobname}
