--- a/optimset.tex
+++ b/optimset.tex
@@ -693,7 +693,8 @@ It is interesting to ask whether~$2n + 1$ still minimizes~$\Lambda_p$ for any~$p
 We leave this problem open and expect the analysis to be more challenging than what we have done.
 One of the challenges is that Lemma~\ref{lem:lambda-p} does not hold when~$m > 2n + 1$, and hence, the estimations of~$\Lambda_p$ will become more involving.
 
-\cite{Dodangeh_Vicente_Zhang_2016}
+The spirit of our analysis is similar to that of~\cite{Dodangeh_Vicente_Zhang_2016}, where it is proved that a widely used direction set is indeed optimal for directional direct search methods
+based on sufficient decrease. While proving nothing surprising, this kind of investigation deepens our understanding about certain algorithmic strategies that we often employ but rarely ask why.
 
 
 \section{Conclusion}
